# Dutch-Election-Campaign-YouTube-Analysis

./: .env.example  .gitignore  01_retrieve.py  02_anonymize.py  03_process.py  04_analyze.py  05_sentiment_analysis.py  06_sentiment_results.py  LICENSE  README.md  pyproject.toml  requirements.txt  trefwoordenlijst.txt
