[project]
name = "osint"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "google-api-python-client==2.197.0",
    "google-auth==2.55.0",
    "google-auth-httplib2==0.4.0",
    "matplotlib==3.11.0",
    "pandas==3.0.3",
    "protobuf==7.35.1",
    "python-dotenv==1.2.2",
    "rich>=15.0.0",
    "scipy==1.18.0",
    "sentencepiece==0.2.1",
    "tenacity==9.1.2",
    "torch>=2.12.1",
    "transformers==5.12.1",
]
